--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,13 +12,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_blue_elves:
+  flutter_blue_elves: ^0.1.8
     # When depending on this package from a real application you should use:
     #   flutter_blue_elves: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
-    # the parent directory to use the current plugin's version. 
-    path: ../
+    # the parent directory to use the current plugin's version.
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
